roles/airflow/files/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: airflow-webserver
  namespace: airflow-ns
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: airflow-webserver
          port: 8080
      middlewares:
        - name: website-http-to-https
  tls:
    secretName: myminio-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: website-http-to-https
  namespace: tenant-ns
spec:
  redirectScheme:
    scheme: https
    permanent: true
